services/posts-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
  labels:
    app: posts-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
        version: v1
    spec:
      containers:
        - name: posts-service
          image: posts-service:latest
          ports:
            - containerPort: 8002
