services/posts-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
  labels:
    app: posts-service
spec:
  selector:
    app: posts-service
  ports:
    - name: http
      port: 8002
      targetPort: 8002
