services/posts-service/k8s/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: posts-service-dr
spec:
  host: posts-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
